# tptp

./: .ghci  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  README.md  tptp.cabal  tstp.cabal
src/Data/: TPTP.hs  TSTP.hs
src/Data/TPTP/: Internal.hs  Pretty.hs
src/Data/TSTP/: Internal.hs  Pretty.hs
test/: UnitTests.hs
test-data/: tptp4X
test-data/szs/fof/: AGT004+2---Metis---2.4.THM-CRf.original.s  ALG043+1---Vampire---4.3.THM-Ref.original.s  group-theory---E.p  group-theory---Vampire.s  ski---Vampire.s  syllogism---E.p  syllogism---Vampire.s
test-data/szs/tff/: AGT004+2---Z3---4.4.1.THM-Prf.original.s  ALG039+1---Z3---4.4.1.THM-Prf.original.s
test-data/tptp/cnf/: ALG001-0.ax  ANA001-0.ax  ANA002-0.ax  ANA003-0.ax  BOO001-0.ax  BOO002-0.ax  BOO003-0.ax  BOO004-0.ax  CAT001-0.ax  CAT002-0.ax  CAT003-0.ax  CAT004-0.ax  COL001-0.ax  COL002-0.ax  COL002-1.ax  FLD001-0.ax  FLD002-0.ax  GEO001-0.ax  GEO001-1.ax  GEO002-0.ax  GEO002-1.ax  GEO002-2.ax  GEO002-3.ax  GEO003-0.ax  GEO004-0.ax  GEO004-1.ax  GEO004-2.ax  GEO004-3.ax  GEO005-0.ax  GRP001-0.ax  GRP002-0.ax  GRP003-0.ax  GRP003-1.ax  GRP003-2.ax  GRP004-0.ax  GRP004-1.ax  GRP004-2.ax  GRP005-0.ax  GRP006-0.ax  GRP008-0.ax  (+91 more)
test-data/tptp/fof/: AGT001+0.ax  AGT001+1.ax  AGT001+2.ax  ALG002+0.ax  COM001+0.ax  COM001+1.ax  CSR001+0.ax  CSR001+1.ax  CSR001+2.ax  CSR001+3.ax  CSR003+3.ax  CSR004+0.ax  GEO004+0.ax  GEO004+1.ax  GEO004+2.ax  GEO004+3.ax  GEO006+0.ax  GEO006+1.ax  GEO006+2.ax  GEO006+3.ax  GEO006+4.ax  GEO006+5.ax  GEO006+6.ax  GEO007+0.ax  GEO007+1.ax  GEO008+0.ax  GEO009+0.ax  GEO010+1.ax  GEO011+0.ax  GRA001+0.ax  GRP003+0.ax  GRP004+0.ax  GRP007+0.ax  HAL001+0.ax  KLE001+0.ax  KLE001+1.ax  KLE001+2.ax  KLE001+3.ax  KLE001+4.ax  KLE001+5.ax  (+59 more)
test-data/tptp/tff/: COM110_5.p  DAT001=0.ax  DAT002=0.ax  DAT002=1.ax  DAT003=0.ax  DAT004=0.ax  (+7 more)
test/DocTests/: Main.hs
test/QuickCheckSpec/: ArbitrarilyPretty.hs  Generators.hs  Main.hs  Normalizers.hs
test/UnitTests/: Main.hs
(+19 files in other folders)
