cabal-version: 2.4
name: tstp
version: 0.1.0.0
synopsis: A parser and a pretty printer for TSTP proofs
description:
  [TSTP](http://www.tptp.org/TSTP/) (Thousand Solutions for Theorem Provers)
  is the standard language of proofs constructed by automated first-order
  theorem provers.
  .
  This library provides definitions of data types, a pretty printer and an
  [attoparsec](http://hackage.haskell.org/package/attoparsec) parser for
  (currently, a subset of) the TSTP language.
homepage: https://github.com/aztek/tstp
bug-reports: https://github.com/aztek/tstp/issues
license: GPL-3.0-only
license-file: LICENSE
author: Evgenii Kotelnikov
maintainer: evgeny.kotelnikov@gmail.com
category: Language, Parsing, Pretty Printer, Theorem Provers, Formal Methods
extra-source-files: README.md

source-repository head
  type: git
  location: git://github.com/aztek/tstp.git

flag Werror
  default: False
  manual: True

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Data.TSTP
    Data.TSTP.Internal
    Data.TSTP.Parse.Combinators
    Data.TSTP.Parse.Text
    Data.TSTP.Parse.Text.Lazy
    Data.TSTP.Pretty
  ghc-options:
    -Wall
  if flag(Werror)
    ghc-options: -Werror
  build-depends:
    base >= 4.5 && < 5.0,
    text,
    attoparsec,
    scientific,
    prettyprinter
  if impl(ghc < 8)
    build-depends:
      semigroups

test-suite quickcheck-spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test/QuickCheckSpec
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
    Generators
  ghc-options:
    -Wall
  if flag(Werror)
    ghc-options: -Werror
  build-depends:
    base >= 4.5 && < 5.0,
    text,
    attoparsec,
    scientific,
    prettyprinter,
    tstp,
    generic-random,
    QuickCheck
  if impl(ghc < 8)
    build-depends:
      semigroups
  if impl(ghc < 8.2)
    build-depends:
      bifunctors
